--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <spring.mongodb>1.10.4.RELEASE</spring.mongodb>
         <hibernate.version>4.3.5.Final</hibernate.version>
         <hibernate-search.version>4.5.0.Final</hibernate-search.version>
+        <ehcache.version>2.6.11</ehcache.version>
         <mysql.driver>5.1.35</mysql.driver>
         <mongodb.driver>3.4.0</mongodb.driver>
         <javax.servlet>2.5</javax.servlet>
@@ -68,6 +69,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
             <version>${spring.mongodb}</version>
@@ -85,6 +92,19 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+            <version>${ehcache.version}</version>
+        </dependency>
+
 
         <!--Database-->
 
@@ -146,6 +166,40 @@
             <version>${logback.version}</version>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- Ehcache -->
+        <!--<dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+            <version>2.6.11</version>
+        </dependency>-->
+        <!--json-->
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>${json.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>stax</groupId>
+                    <artifactId>stax-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!--Wurfl-->
+        <!--<dependency>
+            <groupId>net.sourceforge.wurfl</groupId>
+            <artifactId>wurfl</artifactId>
+            <version>1.3.1.1</version>
+        </dependency>-->
+
+        <!--max mind-->
+        <dependency>
+            <groupId>com.maxmind.geoip2</groupId>
+            <artifactId>geoip2</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
     </dependencies>
     <!--<build>
         <finalName>ssp</finalName>
