--- a/ssp-web/src/main/resources/hibernate.properties
+++ b/ssp-web/src/main/resources/hibernate.properties
@@ -1,9 +1,9 @@
 #hibernate
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=create
-hibernate.show_sql=true
-show_sql=true
-hibernate.format_sql=true
+hibernate.show_sql=false
+show_sql=false
+hibernate.format_sql=false
 hibernate.connection.useUnicode=UTF-8
 hibernate.connection.characterEncoding=UTF-8
 hibernate.connection.charSet=UTF-8
