SSP complete working code. one thing has to verify with working dsp response.

--- a/ssp-web/src/main/resources/ssp.properties
+++ b/ssp-web/src/main/resources/ssp.properties
@@ -3,5 +3,42 @@ max.pool.size=500
 queue.capacity=2000
 executor.service.monitor.time=2000
 
+ssp.currency=USD
+ssp.maxmind.db.location=/Users/ashqures/project/home-pc/ssp/source/doc/GeoIP2-City.mmdb
+ssp.wurfl.db.location=/Users/ashqures/project/home-pc/ssp/source/doc/wurfl.xml
 
-##sudo scutil --set HostName "localhost" run this command in mac os if eh cache not able to get local host
+##dsp config
+dsp.response.time.max=120
+
+##Mongo Config
+ssp.mongo.host=127.0.0.1
+ssp.mongo.port=27017
+ssp.mongo.database=ssp
+
+##Mysql config
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/ssp_server?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=welcome
+
+
+#hibernate
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.hbm2ddl.auto=update
+hibernate.show_sql=true
+show_sql=true
+hibernate.format_sql=true
+hibernate.connection.useUnicode=UTF-8
+hibernate.connection.characterEncoding=UTF-8
+hibernate.connection.charSet=UTF-8
+hibernate.connection.defaultNChar=true
+hibernate.generate_statistics=true
+hibernate.cache.second.level=true
+hibernate.cache.query=true
+hibernate.cache.factory=org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.ehcache.native.client.address=127.0.0.1
+hibernate.eh.cache.resource.name=ehcache.xml
+hibernate.dbcp.initialSize=5
+hibernate.dbcp.maxActive=100
+hibernate.dbcp.maxIdle=10
+hibernate.dbcp.minIdle=1
