--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <spring.version>4.3.5.RELEASE</spring.version>
-        <spring.mongodb>1.10.4.RELEASE</spring.mongodb>
+        <spring.mongodb>1.10.6.RELEASE</spring.mongodb>
         <hibernate.version>4.3.5.Final</hibernate.version>
         <hibernate-search.version>4.5.0.Final</hibernate-search.version>
         <ehcache.version>2.6.11</ehcache.version>
@@ -33,6 +33,12 @@
         <common.dbcp>1.3</common.dbcp>
         <logback.version>1.0.13</logback.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>Internal company repository</id>
+            <url>file://${basedir}/lib</url>
+        </repository>
+    </repositories>
     <dependencies>
         <!--Spring-->
         <dependency>
@@ -51,11 +57,11 @@
             <version>${spring.version}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
@@ -128,11 +134,11 @@
             <artifactId>commons-dbcp</artifactId>
             <version>${common.dbcp}</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
             <version>${httpclient.version}</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>commons-pool</groupId>
@@ -174,7 +180,7 @@
             <version>2.6.11</version>
         </dependency>-->
         <!--json-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.codehaus.jettison</groupId>
             <artifactId>jettison</artifactId>
             <version>${json.version}</version>
@@ -184,7 +190,7 @@
                     <artifactId>stax-api</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
 
         <!--Wurfl-->
         <!--<dependency>
@@ -200,26 +206,66 @@
             <version>2.9.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/net.sourceforge.wurfl/wurfl -->
+        <dependency>
+            <groupId>com.scientiamobile.wurfl</groupId>
+            <artifactId>wurfl</artifactId>
+            <version>1.8.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sourceforge.wurfl</groupId>
+            <artifactId>wurfl</artifactId>
+            <version>1.3.1.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>jcl-over-slf4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.openrtb/openrtb-core -->
+        <dependency>
+            <groupId>com.google.openrtb</groupId>
+            <artifactId>openrtb-core</artifactId>
+            <version>1.4.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.truth</groupId>
+            <artifactId>truth</artifactId>
+            <version>0.32</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/com.google.collections/google-collections -->
+        <!--<dependency>
+            <groupId>com.google.collections</groupId>
+            <artifactId>google-collections</artifactId>
+            <version>1.0-rc2</version>
+        </dependency>-->
+
+
+
     </dependencies>
-    <!--<build>
-        <finalName>ssp</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                   <groupId>org.apache.maven.plugins</groupId>
-                   <artifactId>maven-war-plugin</artifactId>
-                   <configuration>
-                       <outputDirectory>D:\Glarimy\Programs\apache-tomcat-7.0.27\webapps</outputDirectory>
-                   </configuration>
-               </plugin>
-        </plugins>
-    </build>-->
+
+    
 </project>
