All new changes accomplished.

--- a/ssp-web/src/main/resources/ssp.properties
+++ b/ssp-web/src/main/resources/ssp.properties
@@ -1,9 +1,10 @@
-core.pool.size=200
-max.pool.size=500
+core.pool.size=500
+max.pool.size=1000
 queue.capacity=2000
 executor.service.monitor.time=2000
 
 ssp.currency=USD
+ssp.lmt=0
 ssp.maxmind.db.location=/Users/ashqures/project/home-pc/ssp/source/doc/GeoIP2-City.mmdb
 ssp.wurfl.db.location=/Users/ashqures/project/home-pc/ssp/source/doc/wurfl.xml
 
