--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
         <!-- Ehcache -->
         <!--<dependency>
             <groupId>net.sf.ehcache</groupId>
@@ -193,11 +199,6 @@
         </dependency>-->
 
         <!--Wurfl-->
-        <!--<dependency>
-            <groupId>net.sourceforge.wurfl</groupId>
-            <artifactId>wurfl</artifactId>
-            <version>1.3.1.1</version>
-        </dependency>-->
 
         <!--max mind-->
         <dependency>
@@ -223,8 +224,20 @@
                     <artifactId>logback-core</artifactId>
                 </exclusion>
                 <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>jcl-over-slf4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-web</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -254,7 +267,12 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
-
+        <!--<dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+-->
 
         <!-- https://mvnrepository.com/artifact/com.google.collections/google-collections -->
         <!--<dependency>
