--- a/ssp-web/src/main/resources/ssp.properties
+++ b/ssp-web/src/main/resources/ssp.properties
@@ -7,18 +7,27 @@ ssp.currency=USD
 ssp.lmt=0
 ssp.maxmind.db.location=/Users/ashqures/project/home-pc/ssp/source/doc/GeoIP2-City.mmdb
 ssp.wurfl.db.location=/Users/ashqures/project/home-pc/ssp/source/doc/wurfl.xml
+#ssp.maxmind.db.location=/home/ubuntu/ashif/maxmind/GeoIP2-City.mmdb
+#ssp.wurfl.db.location=/home/ubuntu/ashif/wurfl/wurfl.xml
 
 ##dsp config
+dsp.connection.time.max=20
 dsp.response.time.max=120
 
 ##Mongo Config
+#ssp.mongo.host=54.194.86.86
+#ssp.mongo.host=172.31.62.8
 ssp.mongo.host=127.0.0.1
 ssp.mongo.port=27017
-ssp.mongo.database=ssp
+ssp.mongo.database=ssp_server
+ssp.mongo.username=ssp_server
+ssp.mongo.password=RjRCrBm5c67AKxRX
 
 ##Mysql config
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/ssp_server?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8
+#jdbc.username=ssp_server
+#jdbc.password=RjRCrBm5c67AKxRX
 jdbc.username=root
 jdbc.password=welcome
 
