--- a/ssp-web/src/main/resources/ssp.properties
+++ b/ssp-web/src/main/resources/ssp.properties
@@ -11,21 +11,21 @@ ssp.wurfl.db.location=/Users/ashqures/project/home-pc/ssp/source/doc/wurfl.xml
 #ssp.wurfl.db.location=/home/ubuntu/ashif/wurfl/wurfl.xml
 
 ##dsp config
-dsp.connection.time.max=20
-dsp.response.time.max=120
+dsp.connection.time.max=100
+dsp.response.time.max=400
 
 ##Mongo Config
 #ssp.mongo.host=54.194.86.86
 #ssp.mongo.host=172.31.62.8
 ssp.mongo.host=127.0.0.1
 ssp.mongo.port=27017
-ssp.mongo.database=ssp_server
+ssp.mongo.database=ssp_2
 ssp.mongo.username=ssp_server
 ssp.mongo.password=RjRCrBm5c67AKxRX
 
 ##Mysql config
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/ssp_server?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/ssp_2?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8
 #jdbc.username=ssp_server
 #jdbc.password=RjRCrBm5c67AKxRX
 jdbc.username=root
